# Orin-Nano-USB-Camera

./: README.md  camera_interface.cpp  test
inc/: camera_interface.hpp  gui.hpp
src/: CMakeLists.txt  camera_interface.cpp  gui.cpp  main.cpp
